--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <!--todo 替换facebook_app_id、fb_login_protocol_scheme、facebook_client_token参数-->
-    <string name="facebook_app_id">facebook_app_id</string>
-    <string name="fb_login_protocol_scheme">fbfacebook_app_id</string>
-    <string name="facebook_client_token">fb_client_token</string>
-    <string name="app_name">"NCGDEMO"</string>
+        <string name="facebook_app_id">1122268772269397</string>
+        <string name="fb_login_protocol_scheme">fb1122268772269397</string>
+        <string name="facebook_client_token">327cbe63433d1831b737d25e50bf5695</string>
+        <string name="app_name">"NCGDEMO"</string>
 </resources>
